--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Josefin Sans';
+  background-color: #FFFAFB;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+
 }
+
+
+
+.hero-banner-img {
+  position: absolute;
+  right: 70px;
+  top: 0px;
+  width: 700px;
+  height: 950px;
+  margin-top: -260px;
+  border-radius: 400px;
+
+}
+
+@media screen and (max-width:1200px) {
+  .detail-image {
+    width: 300px;
+    height: 300px;
+  }
+ .hero-banner-img {
+    display: none;
+  }
+
+}
+
+@media screen and (max-width:400px) {
+  .exercise-card {
+    width: 280px;
+  }
+}
+
+
+  
+
