--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,17 +1,26 @@
-#signin {
+#login {
     padding-left:20px;
     padding-right:20px;
+    border-radius: 20px;
 }
 a {
     text-decoration: none;
 }
-.signin-page {
-    width: 100%;
+.login-page {
+    width: 50%;
     height: 100vh;
     display: inline-block;
     display: flex;
-    align-items: center;
+    align-items: right;
+    position: relative;
+    margin-top: 5rem;
+    
 }
 .form-right i {
-    font-size: 100px;
+    font-size: 50px;
 }
+
+.container {
+    width: 100%;
+    background-color: #F1E3E4;
+    }
