--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,17 +1,26 @@
 #signup {
-    padding-left:20px;
-    padding-right:20px;
+  padding-left:20px;
+  padding-right:20px;
 }
-html, body {
-    width: 100%;
-    height: 100%;
-  }
+a {
+  text-decoration: none;
+}
+.signup-page {
+  width: 45%;
+  height: 100vh;
+  display: inline-block;
+  display: flex;
+  align-items: right;
+  position: relative;
+  margin-top: 5rem;
   
-  .signup {
-    margin: 0.5em;
-  }
-  
-  .well {
-    width: 50%;
-    margin: 0 auto;
-  }
+}
+.form-right i {
+  font-size: 100px;
+
+}
+
+.container {
+width: 100%;
+background-color: #F1E3E4;
+}
