--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   font-family: 'Josefin Sans';
   background-color: #FFFAFB;
-}
+} */
 
 * {
   padding: 0px;
@@ -13,13 +13,12 @@ body {
 
 
 .hero-banner-img {
-  position: absolute;
-  right: 70px;
-  top: 0px;
-  width: 700px;
-  height: 950px;
+ 
+  max-width: 700px;
+  width: 100%;
   margin-top: -260px;
-  border-radius: 400px;
+  margin-right: 70px;
+ border-radius: 400px;
 
 }
 
@@ -29,7 +28,7 @@ body {
     height: 300px;
   }
  .hero-banner-img {
-    display: none;
+    /* display: none; */
   }
 
 }
