--- a/src/screens/WorkoutForm.css
+++ b/src/screens/WorkoutForm.css
@@ -1,40 +1,49 @@
-form {
+.workout {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #333;
     padding: 20px;
-    border-radius: 10px;
-    font-size: 3em;
+    border-radius: 20px;
+    font-size: 2em;
+    font-style:oblique;
+    color: rgb(0, 0, 0);
+    width: 60%;
+    border-style:solid;
+    margin-top: 50px;
+    margin-left: 100px;
+    background-color: #C0F5FA;
 }
 
-label {
+.workout label {
     margin-right: 10px;
-    color: #ddd;
+    color: rgb(4, 0, 0);
+    font-size:large;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:bolder;
+    
 }
 
-input {
-    margin-bottom: 10px;
-    background-color: #262626;
+.workout input {
+    margin-bottom: 12px;
     border-radius: 5px;
-    color:#ddd;
-    border: 1px solid #ddd;
-    padding: 5px;
-    font-size: .5em;
+    color:rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
+    padding: 10px;
+    font-size: 12px;
 }
 
-button {
-    margin-top: 10px;
-    background-color: #ddd;
-    color: #1c1c1c;
-    border-radius: 5px;
+.workout button {
+    margin-top: 20px;
+    color: white;
+    border-radius: 15px;
     padding: 10px 20px;
-    border: 1px solid #ddd;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 0.6em;
+    background-color: blue;
 }
 
 .exercise-row {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
