--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-/* body {
-  font-family: 'Josefin Sans';
-  background-color: #FFFAFB;
-} */
+
 
 * {
   padding: 0px;
@@ -13,13 +10,14 @@
 
 
 .hero-banner-img {
- 
-  max-width: 700px;
+ max-width: 700px;
   width: 100%;
-  margin-top: -260px;
+  margin-top: -400px;
   margin-right: 70px;
- border-radius: 400px;
-
+ border-radius: 5000px;
+ margin-bottom: 30px;
+ padding-top: 70px;
+padding-bottom: 20px;
 }
 
 @media screen and (max-width:1200px) {
@@ -27,17 +25,49 @@
     width: 300px;
     height: 300px;
   }
- .hero-banner-img {
-    /* display: none; */
-  }
+
+  .hero-banner-img {
+  max-width: 700px;
+   width: 80%;
+   height: 80%;
+   margin-top: -400px;
+   margin-right: 70px;
+  border-radius: 5000px;
+  margin-top: 80px;
+  margin-left: 30px;
+  margin-bottom: 40px;
+ 
+ }
+
+ li,h1,h2 {
+  font-size: 1em;
+
+
+ }
+ 
+ul {
+  margin: 0 auto;
+  width: 90%;
+  margin-left: -60px;
 
 }
 
-@media screen and (max-width:400px) {
-  .exercise-card {
-    width: 280px;
-  }
+li {
+  width: 90%;
 }
+
+/* div {
+  margin-left: -32px;
+} */
+
+
+ 
+
+}
+
+
+
+
 
 
   
