--- a/src/screens/FitnessHistory.css
+++ b/src/screens/FitnessHistory.css
@@ -5,8 +5,13 @@ h1, h2 {
     width: 70%;
     border-style: none;
     margin-top: 50px;
-    margin-left: 100px;
-    flex-wrap: wrap;
+    margin-left: 40px;
+   
+}
+
+h2 {
+    margin-top: 30px;
+    font-family: fantasy;
 }
 
 button {
@@ -16,7 +21,8 @@ button {
     padding: 10px 20px;
     margin: 20px auto;
     font-size: 2rem;
-    flex-wrap: wrap;
+    margin-top: -90px;
+    
     
     
    
@@ -30,13 +36,12 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:50%;
+    width:80%;
     border-style:solid;
-    margin-bottom: 150px;
+    margin-bottom: 120px;
     margin-left: 100px;
     background-color: #D1FAFF;
     border-radius: 15px;
-    flex-wrap: wrap;
     
 }
 
@@ -54,5 +59,6 @@ li {
     margin-left: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     flex-wrap: wrap;
+    
     
 }
